fixes clicking behind text

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  pointer-events: none;
 }
 
 .email {
@@ -39,6 +40,7 @@ body {
   outline: none;
   border: none;
   color: #ffffff;
+  pointer-events: all;
 }
 
 .email::placeholder {
